argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"    #annotation for redirection over HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: argocd-server-ingress
  namespace: argocd  #must be the same namespace where argocd is installed
spec:
  ingressClassName: "nginx"
  rules:
  - host: argocd-server.ingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
